Use JDK 9 collections factories where possible.