@@ -27,7 +27,7 @@ public class C_DefaultMethods {
      */
     @Test
     public void c01_appendNew() {
-        List<StringBuilder> sbList = Arrays.asList(
+        List<StringBuilder> sbList = List.of(
             new StringBuilder("alfa"),
             new StringBuilder("bravo"),
             new StringBuilder("charlie"));
@@ -37,10 +37,10 @@ public class C_DefaultMethods {
         sbList.forEach(s -> s.append("new"));
         //ENDREMOVE
 
-        assertEquals(Arrays.asList("alfanew", "bravonew", "charlienew"),
-                sbList.stream()
-                      .map(StringBuilder::toString)
-                      .collect(Collectors.toList()));
+        assertEquals(List.of("alfanew", "bravonew", "charlienew"),
+                     sbList.stream()
+                           .map(StringBuilder::toString)
+                           .collect(Collectors.toList()));
     }
     // Hint:
     // <editor-fold defaultstate="collapsed">
@@ -63,7 +63,7 @@ public class C_DefaultMethods {
         // list.removeIf(s -> (s.length() % 2) != 0);
         //ENDREMOVE
 
-        assertEquals(Arrays.asList("alfa", "echo"), list);
+        assertEquals(List.of("alfa", "echo"), list);
     }
     // Hint:
     // <editor-fold defaultstate="collapsed">
@@ -86,7 +86,7 @@ public class C_DefaultMethods {
         // list.replaceAll(s -> s.toUpperCase());
         //ENDREMOVE
 
-        assertEquals(Arrays.asList("ALFA", "BRAVO", "CHARLIE", "DELTA", "ECHO", "FOXTROT"),
+        assertEquals(List.of("ALFA", "BRAVO", "CHARLIE", "DELTA", "ECHO", "FOXTROT"),
                      list);
     }
     // Hint:
@@ -141,10 +141,10 @@ public class C_DefaultMethods {
         map.replaceAll((key, value) -> value + key);
         //ENDREMOVE
 
-        assertEquals(3, map.size());
-        assertEquals("alfa1",    map.get(1));
-        assertEquals("bravo2",   map.get(2));
-        assertEquals("charlie3", map.get(3));
+        assertEquals(Map.of(1, "alfa1",
+                            2, "bravo2",
+                            3, "charlie3"),
+                     map);
     }
     // Hint:
     // <editor-fold defaultstate="collapsed">
@@ -158,7 +158,7 @@ public class C_DefaultMethods {
      */
     @Test
     public void c06_mapOfListOfStringsByLength() {
-        List<String> list = Arrays.asList(
+        List<String> list = List.of(
             "aardvark", "bison", "capybara",
             "alligator", "bushbaby", "chimpanzee",
             "avocet", "bustard", "capuchin");
@@ -169,13 +169,13 @@ public class C_DefaultMethods {
         list.forEach(s -> result.computeIfAbsent(s.length(), key -> new ArrayList<>()).add(s));
         //ENDREMOVE
 
-        assertEquals(Arrays.asList(5, 6, 7, 8, 9, 10), new ArrayList<>(result.keySet()));
-        assertEquals(Arrays.asList("bison"), result.get(5));
-        assertEquals(Arrays.asList("avocet"), result.get(6));
-        assertEquals(Arrays.asList("bustard"), result.get(7));
-        assertEquals(Arrays.asList("aardvark", "capybara", "bushbaby", "capuchin"), result.get(8));
-        assertEquals(Arrays.asList("alligator"), result.get(9));
-        assertEquals(Arrays.asList("chimpanzee"), result.get(10));
+        assertEquals(Map.of( 5, List.of("bison"),
+                             6, List.of("avocet"),
+                             7, List.of("bustard"),
+                             8, List.of("aardvark", "capybara", "bushbaby", "capuchin"),
+                             9, List.of("alligator"),
+                            10, List.of("chimpanzee")),
+                     result);
     }
     // <editor-fold defaultstate="collapsed">
     // Use Map.computeIfAbsent() within Iterable.forEach().
@@ -189,7 +189,7 @@ public class C_DefaultMethods {
      */
     @Test
     public void c07_mapOfStringByInitialCharacter() {
-        List<String> list = Arrays.asList(
+        List<String> list = List.of(
             "aardvark", "bison", "capybara",
             "alligator", "bushbaby", "chimpanzee",
             "avocet", "bustard", "capuchin");
@@ -200,10 +200,10 @@ public class C_DefaultMethods {
         list.forEach(s -> result.merge(s.charAt(0), s, (s1, s2) -> s1 + ":" + s2));
         //ENDREMOVE
 
-        assertEquals(Arrays.asList('a', 'b', 'c'), new ArrayList<>(result.keySet()));
-        assertEquals("aardvark:alligator:avocet",    result.get('a'));
-        assertEquals("bison:bushbaby:bustard",       result.get('b'));
-        assertEquals("capybara:chimpanzee:capuchin", result.get('c'));
+        assertEquals(Map.of('a', "aardvark:alligator:avocet",
+                            'b', "bison:bushbaby:bustard",
+                            'c', "capybara:chimpanzee:capuchin"),
+                     result);
     }
     // Hint:
     // <editor-fold defaultstate="collapsed">
