@@ -39,7 +39,7 @@ public class E_IntermediateStreams {
      */
     @Test
     public void e1_stringsToCharacters() {
-        List<String> input = Arrays.asList("alfa", "bravo", "charlie");
+        List<String> input = List.of("alfa", "bravo", "charlie");
 
         //TODO//List<Character> result = null;
         //BEGINREMOVE
@@ -85,7 +85,7 @@ public class E_IntermediateStreams {
         //ENDREMOVE
 
         assertEquals(
-            Arrays.asList(
+            List.of(
                 "From", "fairest", "creatures", "we", "desire", "increase",
                 "That", "thereby", "beauty's", "rose", "might", "never", "die",
                 "But", "as", "the", "riper", "should", "by", "time", "decease",
@@ -128,7 +128,7 @@ public class E_IntermediateStreams {
         //ENDREMOVE
 
         assertEquals(
-            Arrays.asList(
+            List.of(
                 "abundance", "beauty's", "contracted", "creatures",
                 "increase", "niggarding", "ornament", "substantial"),
             output);
@@ -160,7 +160,7 @@ public class E_IntermediateStreams {
         //ENDREMOVE
 
         assertEquals(
-            Arrays.asList(
+            List.of(
                 "substantial", "ornament", "niggarding", "increase",
                 "creatures", "contracted", "beauty's", "abundance"),
             result);
@@ -192,7 +192,7 @@ public class E_IntermediateStreams {
         //ENDREMOVE
 
         assertEquals(
-            Arrays.asList(
+            List.of(
                 "a", "as", "be", "by", "in", "or", "to", "we",
                 "and", "art", "bud", "but", "die", "due", "eat", "foe",
                 "his", "now", "own", "the", "thy", "too", "bear", "else",
